# recalld

./: .envrc.example  .gitignore  AGENTS.md  Makefile  README.md  TESTING.md  app.go  bus.go  go.mod  go.sum  handlers.go  handlers_test.go  llm.go  models.go  models_test.go  pipeline.go  pipeline_runtime.go  pyproject.toml  recalld.go  root.go  templates.go  vault.go  viewmodels.go
bootstrap/: Transcript Summariser.preset.json  prompts.json
docs/: README.md  experiments.md  langfuse.md  setup.md  troubleshooting.md
docs/plans/: 2026-04-29-delete-incomplete-job.md  2026-04-29-go-layout-restructure.md  2026-04-29-ui-redesign.md
docs/specs/: 2026-04-29-delete-incomplete-job-design.md  2026-04-29-ui-redesign-design.md
recalld/: __main__.py  app.py  config.py  events.py  jobs.py  runtime.py  tracing.py
recalld/experiments/: __init__.py  langfuse_evaluation_rules.py  langfuse_evaluator.py  langfuse_focus.py  langfuse_models.py  langfuse_session_scores.py  langfuse_style.py  langfuse_summary.py  langfuse_themes.py
recalld/llm/: chunking.py  client.py  context.py  prompt_cache.py  prompts.py
recalld/pipeline/: align.py  diarise.py  focus.py  ingest.py  postprocess.py  runner.py  themes.py  transcribe.py  vault.py
recalld/routers/: categories.py  jobs.py  settings.py  upload.py
recalld/static/: app.js  (+1 more)
scripts/: langfuse  setup
templates/: base.tmpl  index.tmpl  processing.tmpl  settings.tmpl
tests/: conftest.py  test_app.py  test_config.py  test_jobs.py  test_routers_jobs.py  test_routers_settings.py  test_routers_upload.py  test_runtime.py  test_tracing.py
(+32 files in other folders)
