[project]
name = "recalld"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pywhispercpp>=1.2",
    "pyannote.audio>=3.3",
    "sentence-transformers>=3.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2",
]

[project.scripts]
recalld = "recalld.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "respx>=0.21",
]
